lab8.2-demo-cloud9Instance-cloudformation.yaml
Resources:
  Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-059a30df01b26a209
      InstanceType: t2.micro
      UserData: >-
        IyEvYmluL2Jhc2gKClVOSVhfVVNFUj0iZWMyLXVzZXIiClVOSVhfVVNFUl9IT01FPSIvaG9tZS9lYzItdXNlciIKRU5WSVJPTk1FTlRfUEFUSD0iL2hvbWUvZWMyLXVzZXIvZW52aXJvbm1lbnQiClVOSVhfR1JPVVA9JChpZCAtZyAtbiAiJFVOSVhfVVNFUiIpCgojIEFwcGx5IHNlY3VyaXR5IHBhdGNoZXMKT1BFUkFUSU5HX1NZU1RFTT0kKGF3ayAtRj0gJyQxPT0iSUQiIHsgcHJpbnQgJDIgO30nIC9ldGMvb3MtcmVsZWFzZSB8IHNlZCAtZSAncy9eIi8vJyAtZSAncy8iJC8vJykKaWYgWyAiJE9QRVJBVElOR19TWVNURU0iID09ICJhbXpuIiBdOyB0aGVuCiAgICB5dW0gLXEgLXkgdXBkYXRlIC0tc2VjdXJpdHkgPiAvdG1wL2luaXQteXVtLXVwZGF0 [...]
      Tags:
        - Key: Name
          Value: aws-cloud9-Cloud9-Instance-ebf5d12539f04c6b8febb73145a70536
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: subnet-0a265c5cb4ab73c8e
          GroupSet:
            - !Ref InstanceSecurityGroup
          DeleteOnTermination: true
          Description: >-
            ENI for AWS Cloud9 environment
            aws-cloud9-Cloud9-Instance-ebf5d12539f04c6b8febb73145a70536
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp3
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        Security group for AWS Cloud9 environment
        aws-cloud9-Cloud9-Instance-ebf5d12539f04c6b8febb73145a70536
      VpcId: vpc-0a878c66a1fc904b3
      SecurityGroupIngress:
        - FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          CidrIp: 35.172.155.192/27
        - FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          CidrIp: 35.172.155.96/27
      Tags:
        - Key: Name
          Value: aws-cloud9-Cloud9-Instance-ebf5d12539f04c6b8febb73145a70536
